Ignored google service json file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /build
 /captures
 /app/libs/
+/app/client_secret_705258621440-c66o3p7k902d4nchmsvm29e9c1cvr1oj.apps.googleusercontent.com.json
+/app/google-services.json
